# camera_model

./: CMakeLists.txt  readme.md
data/calibration_results/: calib_images  camera_camera_calib.yaml
include/camera_model/apriltag_frontend/: GridCalibrationTargetAprilgrid.hpp  GridCalibrationTargetBase.hpp
include/camera_model/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  FovCamera.h  PinholeCamera.h  PinholeFullCamera.h  PolyFisheyeCamera.h  ScaramuzzaCamera.h  SplineCamera.h
include/camera_model/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h
include/camera_model/code_utils/: eigen_utils.h  sys_utils.h
include/camera_model/code_utils/math_utils/: Polynomial.h  math_utils.h
include/camera_model/gpl/: EigenUtils.h
include/camera_model/sparse_graph/: Transform.h
msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CameraModel.sln  CameraModel.vcxproj  CameraModel.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
src/: intrinsic_calib.cc
src/apriltag_frontend/: GridCalibrationTargetAprilgrid.cpp
src/calib/: CameraCalibration.cc  CameraCalibrationTest.cc
src/camera_models/: CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  FovCamera.cpp  PinholeCamera.cc  PinholeFullCamera.cc  PolyFisheyeCamera.cpp  ScaramuzzaCamera.cc  SplineCamera.cpp
src/code_utils/: poly_test.cpp
src/gpl/: gpl.cc
